--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,36 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
 }
+
+// Define versions in a single place
+ext {
+    // Sdk and tools
+    minSdkVersion = 21
+    targetSdkVersion = 33
+    compileSdkVersion = 33
+
+    // App dependencies
+    coreKtxVersion = '1.9.0'
+    appcompatVersion = '1.6.0'
+    materialVersion = '1.7.0'
+    constraintlayoutVersion = '2.1.4'
+    recyclerviewVersion = '1.2.1'
+    cardviewVersion = '1.0.0'
+    swiperefreshVersion = '1.1.0'
+
+    lifeCycleExtensionsVersion = '2.1.0'
+    supportVersion = '28.0.0'
+    retrofitVersion = "2.9.0"
+    daggerVersion = '2.13'
+    rxJavaVersion = '2.0.1'
+
+    junitVersion = '4.13.2'
+    testJunitVersion = '1.1.5'
+    mockitoInlineVersion = '2.11.0'
+    mockitoCoreVersion = '3.9.0'
+    mockitoAndroidVersion = '3.8.0'
+    coreTestingVersion = '2.1.0@aar'
+    testRunnerVersion = '1.0.2'
+    espressoVersion = '3.0.2'
+
+}
