--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // NYC Schools Base Url
+        buildConfigField 'String', 'BASE_URL', "\"https://data.cityofnewyork.us/\""
     }
 
     buildTypes {
