--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,10 @@ ext {
     swiperefreshVersion = '1.1.0'
 
     // Dagger
-    daggerHiltAndroidVersion = '2.43.2'
-    daggerHiltAndroidCompilerVersion = '2.33-beta'
-    hiltLifeCycleViewmodelVersion = '1.0.0-alpha03'
-    hiltCompilerVersion = '1.0.0'
+    daggerHiltAndroidVersion = '2.28-alpha'
+    daggerHiltAndroidCompilerVersion = '2.28-alpha'
+    hiltLifeCycleViewmodelVersion = '1.0.0-alpha01'
+    hiltCompilerVersion = '1.0.0-alpha01'
 
     // Networking
     retrofitConverterMoshiVersion = "2.6.2"
