--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ ext {
     cardviewVersion = '1.0.0'
     swiperefreshVersion = '1.1.0'
 
+    // View Models
+    fragmentKtxVersion = '1.5.5'
+
     // Lifecycle
     lifecycleVersion = '2.5.1'
 
